Implement HDTCatTree to create an HDT with low resources using HDTCat